--- a/package.json
+++ b/package.json
@@ -5,20 +5,34 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "autoprefixer": "^10.2.5",
     "next": "10.2.3",
     "node-sass": "^4.14.1",
+    "npm": "^7.15.0",
     "postcss": "^8.2.13",
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "run": "^1.4.0",
+    "storybook": "^6.2.9",
     "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@storybook/addon-actions": "^6.2.9",
+    "@storybook/addon-essentials": "^6.2.9",
+    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack5": "^6.3.0-beta.4",
+    "@storybook/manager-webpack5": "^6.3.0-alpha.37",
+    "@storybook/react": "^6.2.9",
     "@types/react": "17.0.8",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.27.0",
     "eslint-config-next": "^10.2.3",
     "typescript": "4.2.4"
