--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepare": "husky install"
   },
   "dependencies": {
     "autoprefixer": "^10.2.5",
@@ -35,6 +36,13 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.27.0",
     "eslint-config-next": "^10.2.3",
+    "husky": "6.0.0",
+    "lint-staged": "11.0.0",
     "typescript": "4.2.4"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx}": "eslint --cache --fix",
+    "*.css": "stylelint --fix",
+    "*.{html,js,ts,tsx,css,md,json}": "prettier --write"
   }
 }
