--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepare": "husky install"
+    "prepare": "husky install && chmod +x .husky/pre-commit"
   },
   "dependencies": {
     "autoprefixer": "^10.2.5",
