--- a/package.json
+++ b/package.json
@@ -32,9 +32,18 @@
     "@storybook/manager-webpack5": "^6.3.0-alpha.37",
     "@storybook/react": "^6.2.9",
     "@types/react": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "babel-loader": "^8.2.2",
     "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-next": "^10.2.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "6.0.0",
     "lint-staged": "11.0.0",
     "typescript": "4.2.4"
@@ -43,5 +52,12 @@
     "*.{js,ts,tsx}": "eslint --cache --fix",
     "*.{css,scss}": "stylelint --fix",
     "*.{html,js,ts,tsx,css,scss,md,json}": "prettier --write"
+  },
+  "prettier": {
+    "arrowParens": "always",
+    "singleQuote": true,
+    "semi": false,
+    "tabWidth": 2,
+    "trailingComma": "none"
   }
 }
