--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.6",
-    "next": "10.2.3",
-    "node-sass": "^4.14.1",
+    "next": "^12.1.4",
     "npm": "^7.15.0",
     "postcss": "^8.3.0",
     "preact": "^10.5.13",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "sass": "^1.49.11",
     "storybook": "^6.2.9",
-    "tailwindcss": "^2.1.4"
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -52,8 +52,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
-    "*.{css,scss}": "stylelint --fix",
-    "*.{html,js,ts,tsx,css,scss,md,json}": "prettier --write"
+    "*.{css,scss}": "stylelint --fix"
   },
   "prettier": {
     "arrowParens": "always",
