--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "6.0.0",
-    "lint-staged": "11.0.0",
+    "lint-staged": "12.1.2",
+    "prettier": "^2.6.2",
     "typescript": "4.3.5"
   },
   "lint-staged": {
