--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx}": "eslint --cache --fix",
-    "*.{css,scss}": "stylelint --fix"
+    "*.{css,scss}": "stylelint --fix",
+    "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   },
   "prettier": {
     "arrowParens": "always",
